<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cine</string>

    <string name="create_by">Creada por Paco</string>
    <string name="go_to_the_web_side">Ir al sitio web</string>
    <string name="get_support">Obtener soporte</string>
    <string name="back">Volver</string>
    <string name="about_go_to_the_web_side">Ir al sitio web</string>
    <string name="about_get_support">Obtener soporte</string>
    <string name="about_back">Volver</string>
    <string name="watch_fight_club">Ver El Club de la Lucha</string>
    <string name="watch_saving_private_ryan">Ver Salvando al Soldado Ryan</string>
    <string name="about">Acerca de</string>
    <string name="watch_related_film">Ver película relacionada</string>
    <string name="edit_film">Editar película</string>
    <string name="back_to_the_main">Volver al principal</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="fight_club">Título: El Club de la Lucha</string>
    <string name="saving_private_ryan">Título: Salvando al Soldado Ryan</string>
    <string name="david_fincher">Director: David Fincher</string>
    <string name="steven_spielberg">Director: Steven Spielberg</string>
    <string name="year_1999">Año: 1999</string>
    <string name="year_1998">Año: 1998</string>
    <string name="saved_changes">Cambios guardados</string>
    <string name="unsaved_changes">Cambios no guardados</string>
    <string name="successfully_saved">Guardado con exito</string>
    <string name="process_cancelled">Process cancelled</string>
    <string name="war">Género: Bélico</string>
    <string name="drama">Género: Drama</string>
    <string name="panoramic">Formato: Panorámico</string>
    <string name="anamorphic_35_mm">Formato: 35 mm anamórfico</string>
    <string name="view_at_IMDB">Ver en IMDB</string>
    <string name="link_fight_club">https://www.imdb.com/title/tt0137523/</string>
    <string name="link_saving_private_ryan">https://www.imdb.com/title/tt0120815/</string>
    <string name="take_a_picture">Tomar una fotografía</string>
    <string name="select_an_image">Seleccionar una imagen</string>
    <string name="title_of_the_film">Título de la película: </string>
    <string name="director_of_the_film">Director de la película: </string>
    <string name="year_of_the_film">Año de la película: </string>
    <string name="link_imdb">Link IMDB: </string>
    <string name="introduce_some_notes">Introducir algunas notas</string>
    <string name="action">Acción</string>
    <string name="comedy">Comedia</string>
    <string name="terror">Terror</string>
    <string name="sciencie_fiction">Ciencia Ficción</string>
</resources>