<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmEditActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_a_picture"/>

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_an_image"/>

    </LinearLayout>



    <EditText
        android:id="@+id/etTitleFilm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/title_of_the_film"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/etDirectorFilm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/director_of_the_film"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/etYearFilm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/year_of_the_film"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/etLinkIMDB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/link_imdb"
        android:padding="8dp"/>


    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:entries="@array/gender_options"/>

    <Spinner
        android:id="@+id/spinnerFormat"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:entries="@array/format_options"/>

    <EditText
        android:id="@+id/etNotes"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/introduce_some_notes"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.737"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

    </LinearLayout>
</LinearLayout>